# meta_hackathons

./: DOCUMENTATION.md  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: baseline_inference.py
server/: app.py  environment.py  models.py  tasks.py
server/static/: app.js  index.css  index.html
